# zephyr_ble_sample

./: .gitignore  CMakeLists.txt  README.md  setup.sh  zephyr_ble_sample_config
app_sources/: ble_application.c  ble_application.h  ble_uart_service.c  ble_uart_service.h  main.c
